
#------------------------------------
# Description:
#  ChangeLog file for package PSCalib
#------------------------------------

Package author: Mikhail Dubrovin

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V02-00-43
2022-11-10 Mikhail Dubrovin
- tag all earlier updates

2022-11-03 Mikhail Dubrovin
- COMMON ISSUES:
        - add/use parameter group='ps-users' for dir/file ownership
        - change dirmode=2775, filemode=664
  app/dcs
  src/DCFileName.py
  src/DCMethods.py
  src/DCUtils.py
  src/GlobalUtils.py
  src/NDArrIO.py - common + cosmetic remove spaces, comments etc.

Tag: V02-00-42
2022-10-17 Mikhail Dubrovin
 - src/CalibParsStore.py - code cleaning, env.calibDir().replace('//','/')

Tag: V02-00-41
2022-10-14 Mikhail Dubrovin
  app/dcs - dirmode=0o2774, filemode=0o664
  src/DCFileName.py - env.calibDir().replace('//','/')
  src/GlobalUtils.py - use DIR_ROOT_DATA

Tag: V02-00-40
2022-09-28 Mikhail Dubrovin
  app/geometry_convert - add optional parameters --dsname, --zpvname, --f_um
  src/UtilsConvert.py - by Chuck's request add/use method z_correction_from_data(args)

Tag: V02-00-39
2022-09-19 Mikhail Dubrovin
- src/GlobalUtils.py - add method python_version_major
- import from Detector.UtilsLogging to fix issue for py3 as default
  - app/geometry_convert
  - src/UtilsConvertCrystFEL.py
  - src/UtilsConvert.py - fix nseg int after division

Tag: V02-00-38
2022-09-14 Mikhail Dubrovin
- rename depreceted modules to *-dep
  include/CSPad2x2CalibIntensity.h, CSPadCalibIntensity.h, PnccdCalibPars.h
  src/CSPad2x2CalibIntensity.cpp, CSPadCalibIntensity.cpp, PnccdCalibPars.cpp
- include/CalibParsStore.h - cosmetic - remove blanks

Tag: V02-00-37
- fix for wrong order of git push and tag commands
Tag: V02-00-36
2022-09-13 Mikhail Dubrovin
  app/dcs - change filemode to 0o666 from 0o2666, define repositorie through the DIR_ROOT from dir_root.py