@@ -9,6 +9,10 @@ Package author: Mikhail Dubrovin
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V02-00-44
+2023-02-14 Mikhail Dubrovin
+- src/GeometryAccess.py - add method convert_mask2d_to_ndarray
+
 Tag: V02-00-43
 2022-11-10 Mikhail Dubrovin
 - tag all earlier updates
